| Bug #42545 | Incorrectly handled node failure in ordered index scan, mysqld signal 11 | ||
|---|---|---|---|
| Submitted: | 2 Feb 2009 14:52 | Modified: | 3 Feb 2009 12:16 |
| Reporter: | Jonas Oreland | Email Updates: | |
| Status: | Closed | Impact on me: | |
| Category: | MySQL Cluster: Cluster (NDB) storage engine | Severity: | S3 (Non-critical) |
| Version: | 6.* | OS: | Any |
| Assigned to: | Jonas Oreland | CPU Architecture: | Any |
[2 Feb 2009 14:52]
Jonas Oreland
[2 Feb 2009 19:32]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/64919 2805 Jonas Oreland 2009-02-02 ndb - bug#42545 - nf inbetween readTuples() and execute() could lead to signal 11 for ordered_index_scans
[2 Feb 2009 19:46]
Bugs System
Pushed into 5.1.31-ndb-6.3.22 (revid:jonas@mysql.com-20090202193744-0jzoaa8txx5rvni1) (version source revid:jonas@mysql.com-20090202193744-0jzoaa8txx5rvni1) (merge vers: 5.1.31-ndb-6.3.22) (pib:6)
[2 Feb 2009 19:47]
Bugs System
Pushed into 5.1.31-ndb-6.4.3 (revid:jonas@mysql.com-20090202194525-id8uvo3fd65xz2va) (version source revid:jonas@mysql.com-20090202194525-id8uvo3fd65xz2va) (merge vers: 5.1.31-ndb-6.4.3) (pib:6)
[2 Feb 2009 19:47]
Bugs System
Pushed into 5.1.31-ndb-6.2.17 (revid:jonas@mysql.com-20090202193228-13gdlnb8xyk5b21e) (version source revid:jonas@mysql.com-20090202193228-13gdlnb8xyk5b21e) (merge vers: 5.1.31-ndb-6.2.17) (pib:6)
[3 Feb 2009 12:16]
Jon Stephens
Documented in the NDB-6.2.17, 6.3.22, and 6.4.3 changelogs as follows:
A data node failure that occurred between calls to
NdbIndexScanOperation::readTuples(SF_OrderBy) and
NdbTransaction::Execute() was not correctly handled; a subsequent
call to nextResult() call caused a NULL pointer to be deferenced,
leading to a segfault in mysqld.
[9 Feb 2009 9:32]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/65578 3248 Martin Skold 2009-02-09 [merge] Merge
[10 Feb 2009 20:12]
Bugs System
Pushed into 6.0.10-alpha (revid:alik@sun.com-20090210194937-s7xshv5l3m1v7wi9) (version source revid:tomas.ulin@sun.com-20090204130805-wb1egwdby2y0cnti) (merge vers: 6.0.10-alpha) (pib:6)
