ndb - bug#42545 - nf inbetween readTuples() and execute() could lead to signal 11 for ordered_index_scans